...
        _errorMessage = ''; // Xóa thông báo lỗi nếu có
      });
    } else {
      setState(() {
        _checkEmailButtonColor = Colors.grey; // Màu xám nếu email không hợp lệ
        _errorMessage =
            'Định dạng email không hợp lệ. Vui lòng kiểm tra đầu vào của bạn.'; // Thông báo lỗi
      });
    }
  }

  @override
  Widget build(BuildContext context) {
...
                    podcasts: widget.podcasts,
                    albums: widget.albums,
                  ),
                ),
              );
            },
            child: const Text('Hãy Đăng Ký Ngay!'),
          ),
        ],
      ),
    );
  }
}
...
